// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin - Peer - Editable Tag Category Display Name should match snapshot 1`] = `
<pf-editable-tag-category-display-name
  editDisplayNameForm={[Function FormGroup]}
  errorSaving$={[Function Observable]}
  fb={[Function FormBuilder]}
  isSaving="false"
  onSave={[Function EventEmitter]}
  saving$={[Function Observable]}
  savingSubscription={[Function Subscriber]}
  value={[Function String]}
>
  <span
    class="editable"
    title="Click to Edit Display Name"
  >
     MOCK_VALUE 
    <span
      class="editable-icon"
    >
      <fa-icon
        icon="pencil"
      />
    </span>
  </span>
</pf-editable-tag-category-display-name>
`;

exports[`Admin - Peer - Editable Tag Category Display Name should show edit form when toggleEdit is triggered 1`] = `
<pf-editable-tag-category-display-name
  editDisplayNameForm={[Function FormGroup]}
  errorSaving$={[Function Observable]}
  fb={[Function FormBuilder]}
  isEditing={[Function Boolean]}
  isSaving="false"
  onSave={[Function EventEmitter]}
  saving$={[Function Observable]}
  savingSubscription={[Function Subscriber]}
  value={[Function String]}
>
  <form
    class="ng-untouched ng-pristine ng-valid"
    novalidate=""
  >
    <div
      class="input-group"
    >
      <input
        autocomplete="off"
        class="form-control ng-untouched ng-pristine ng-valid"
        formcontrolname="tempValue"
        id="editable-category-name-input"
        minlength="3"
        pffocus=""
        type="text"
      />
      <div
        class="input-group-append disabled"
      >
        <span
          class="input-group-text"
        >
          <fa-icon
            class="text-success"
            icon="check-circle"
          />
        </span>
      </div>
      <div
        class="input-group-append"
      >
        <span
          class="input-group-text"
        >
          <fa-icon
            icon="times"
          />
        </span>
      </div>
    </div>
    
  </form>
</pf-editable-tag-category-display-name>
`;
